src/test/deca/context/invalid/sansObj/not-unaire-float.deca
// Description:
//          Utilisation du not unaire sur un float
//
// Résultat:
//L'opérateur Not doit être utilisé sur un booléen
//
{
    float a = 10.57;
    if (!a){}
}